--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./layout/form.html"></include>
+    <include src="./layout/card.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
