--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,33 @@
     <script type="module" src="./index.js"></script>
   </body>
 </html>
+
+<!-- <ul class="country_description">
+  <li class="country_item country_item_name">
+    <p>
+      <img
+        src="${d.flags.svg}"
+        alt="flag"
+        class="country-flag"
+        width="40"
+        height="25"
+      />${d.name}
+    </p>
+  </li>
+  <li>
+    <p class="country-description-title">
+      Capital: <span class="country-description-data">${d.capital}</span>
+    </p>
+  </li>
+  <li>
+    <p class="country-description-title">
+      Population: <span class="country-description-data">${d.population}</span>
+    </p>
+  </li>
+  <li>
+    <p class="country-description-title">
+      Languages:
+      <span class="country-description-data">${d.languages[0].name}</span>
+    </p>
+  </li>
+</ul> -->
